refactor : CarsTest 수정
일급 컬렉션 테스트의 인스턴스 초기화를 수정했습니다.